Add tests for AddNoteCommand