@@ -2,14 +2,13 @@ package seedu.smartnus.logic.commands;
 
 import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static seedu.smartnus.testutil.Assert.assertThrows;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Comparator;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -17,6 +16,7 @@ import org.junit.jupiter.api.Test;
 import javafx.collections.ObservableList;
 import seedu.smartnus.commons.core.GuiSettings;
 import seedu.smartnus.commons.core.theme.Theme;
+import seedu.smartnus.logic.commands.exceptions.CommandException;
 import seedu.smartnus.model.Model;
 import seedu.smartnus.model.ReadOnlySmartNus;
 import seedu.smartnus.model.ReadOnlyUserPrefs;
@@ -28,7 +28,7 @@ import seedu.smartnus.testutil.NoteBuilder;
 
 public class AddNoteCommandTest {
     @Test
-    public void constructor_nullQuestion_throwsNullPointerException() {
+    public void constructor_nullNote_throwsNullPointerException() {
         assertThrows(NullPointerException.class, () -> new AddNoteCommand(null));
     }
 
@@ -40,7 +40,17 @@ public class AddNoteCommandTest {
         CommandResult commandResult = new AddNoteCommand(validNote).execute(modelStub);
 
         assertEquals(String.format(AddNoteCommand.MESSAGE_SUCCESS, validNote), commandResult.getFeedbackToUser());
-        assertEquals(Arrays.asList(validNote), modelStub.notesAdded);
+        assertEquals(List.of(validNote), modelStub.notesAdded);
+    }
+
+    @Test
+    public void execute_duplicateNote_throwsCommandException() {
+        Note validNote = new NoteBuilder().build();
+        AddNoteCommand addCommand = new AddNoteCommand(validNote);
+        ModelStub modelStub = new ModelStubWithNote(validNote);
+
+        assertThrows(CommandException.class,
+                AddNoteCommand.MESSAGE_DUPLICATE_NOTE, () -> addCommand.execute(modelStub));
     }
 
     @Test
@@ -51,20 +61,20 @@ public class AddNoteCommandTest {
         AddNoteCommand addBobCommand = new AddNoteCommand(bob);
 
         // same object -> returns true
-        assertTrue(addAliceCommand.equals(addAliceCommand));
+        assertEquals(addAliceCommand, addAliceCommand);
 
         // same values -> returns true
         AddNoteCommand addAliceCommandCopy = new AddNoteCommand(alice);
-        assertTrue(addAliceCommand.equals(addAliceCommandCopy));
+        assertEquals(addAliceCommand, addAliceCommandCopy);
 
         // different types -> returns false
-        assertFalse(addAliceCommand.equals(1));
+        assertNotEquals(1, addAliceCommand);
 
         // null -> returns false
-        assertFalse(addAliceCommand.equals(null));
+        assertNotEquals(null, addAliceCommand);
 
         // different note -> returns false
-        assertFalse(addAliceCommand.equals(addBobCommand));
+        assertNotEquals(addAliceCommand, addBobCommand);
     }
 
     private class ModelStub implements Model {
@@ -240,6 +250,24 @@ public class AddNoteCommandTest {
         @Override
         public ReadOnlySmartNus getSmartNus() {
             return new SmartNus();
+        }
+    }
+
+    /**
+     * A Model stub that contains a single note.
+     */
+    private class ModelStubWithNote extends ModelStub {
+        private final Note note;
+
+        ModelStubWithNote(Note note) {
+            requireNonNull(note);
+            this.note = note;
+        }
+
+        @Override
+        public boolean hasNote(Note note) {
+            requireNonNull(note);
+            return this.note.isSameNote(note);
         }
     }
 }
